# Bank-Communication

./: .env  Cargo.toml  IMPLEMENTATION_SUMMARY.md  docker-compose.yml  kafka_cfg.env
src/: api.rs  app.rs  config.rs  lib.rs  main.rs  mod.rs  security.rs  utils.rs
src/adapters/: mod.rs
src/app/: builder.rs  config.rs  core.rs  error.rs  mod.rs  utils.rs
src/app/api/: mod.rs
src/app/builder/: builder.rs  mod.rs
src/app/config/: connection_config.rs  database_config.rs  kafka_config.rs  mod.rs
src/app/core/: mod.rs  payments.rs
src/app/handlers/: handler_error.rs  iso8583_msg_handler.rs  mod.rs  pay_os_qr_handler.rs  pay_os_resp_handler.rs  vietqr_handler.rs
src/app/security/: mac_calculator.rs  mod.rs
src/app/service/: emv_iso_mapping.rs  iso8583_msg_handler.rs  iso8583_parser.rs  iso8583_transaction_service.rs  iso_builder_service.rs  mod.rs  pay_os_service.rs  qr_transaction_service.rs  response_handler.rs  reversal_service.rs  stan_generator.rs  tlv_parser.rs  transaction_profile.rs
src/app/utils/: connection_handler.rs  connection_initializer.rs  database.rs  kafka_consumer.rs  kafka_message_sender.rs  kafka_producer.rs  kafka_topic_manager.rs  logging.rs  mod.rs
src/config/: connector.rs  database_config.rs  kafka_config.rs  logging.rs  mod.rs
src/core/: payments.rs
src/dto/: mod.rs  qr_req_dto.rs  qr_resp_dto.rs  vietqr_req_dto.rs  vietqr_resp_dto.rs
src/models/: app_context.rs  card_err.rs  card_payload.rs  card_request.rs  card_resp.rs  card_tokenized.rs  emv_tag.rs  iso8583_message.rs  iso8583_profile.rs  mod.rs  payos_qr_req.rs  payos_qr_resp.rs  transaction.rs  vietqr_req.rs  vietqr_resp.rs
src/repository/: card_transaction_repository.rs  mod.rs  qr_transaction_repository.rs
src/utils/: kafka_consumer.rs  kafka_producer.rs  logging.rs
