[package]
name = "Bank-Communication"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
tokio = { version = "1.48.0", features = ["full"] }

# Standard library for parsing 8583
iso8583_rs = "0.1.10"
iso20022 = "0.1.9"
iso20022-common = "1.0.10"
open-payments-iso20022 = "1.0.10"
quick-xml = { version = "0.38.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
tracing-opentelemetry = "0.32.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
config = "0.15.18"
thiserror = "2.0.17"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
ring = "0.17.14"
async-trait = "0.1.89"
